<resources>
    <string name="app_name">Tugas Adiel</string>
    <string name="wallet_label">Wallet</string>
    <string name="user_label">User</string>
    <string name="dashboard_label">Dashboard</string>
    <string name="user_money">5,600.00</string>
    <string name="pay_money">Pay Money</string>
    <string name="pay_money_desc">To wallet, bank or mobile number</string>
    <string name="request_money">Request Money</string>
    <string name="request_money_desc">Request money from Cowry Loans</string>
    <string name="pay_bill">Pay bill</string>
    <string name="pay_bill_desc">Zero Transactions fees when you pay</string>
    <string name="buy_airtime">Buy airtime</string>
    <string name="buy_airtime_desc">Top-up or Send airtime across Countries</string>
    <string name="hi_clarencce">Hi Clarencce,</string>
    <string name="notification_desc">Notification</string>
</resources>