<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@color/black">

    <ImageButton
        android:id="@+id/wallet"
        android:layout_width="48dp"
        android:layout_height="48dp"

        android:layout_marginStart="24dp"
        android:background="@color/black"
        android:hapticFeedbackEnabled="true"
        android:clickable="true"
        android:focusable="true"
        android:padding="11dp"
        android:scaleType="fitXY"
        android:src="@drawable/wallet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/wallet_label"/>

    <ImageButton
        android:id="@+id/user"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:padding="11dp"
        android:scaleType="fitXY"
        android:src="@drawable/user_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/user_label"/>

    <ImageButton
        android:id="@+id/dashboard"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:background="@color/black"
        android:hapticFeedbackEnabled="true"
        android:clickable="true"
        android:focusable="true"
        android:padding="11dp"
        android:scaleType="fitXY"
        android:src="@drawable/dashboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/dashboard_label"/>


</androidx.constraintlayout.widget.ConstraintLayout>